Fixed some spacing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -39,7 +39,7 @@ body{
 .container h2{
   width:100%;
   max-width:var(--max-width);
-  margin:0 auto;
+  margin-top:20px;
   padding:0 1rem;
   background-color: #49b9a4a2;
   border-radius: 8px;
@@ -90,6 +90,7 @@ nav, p, section, article{
   background:linear-gradient(180deg,#ffffff 0%, #f1f5f4 100%);
   border-bottom:1px solid #e6eef0;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 .header-inner{
   display: grid;
@@ -344,7 +345,7 @@ ul{padding-left:1.15rem}
     border-radius: 6px;
     padding: 18px 10px 24px 10px;
     margin: 24px auto;
-    max-width: 900px;
+    max-width: 800px;
     background: #f9f9f9;
     text-align: center;
 }
